<resources>
    <string name="app_name">Escolinha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Bem Vindo</string>
    <string name="make_login">faça login para continuar</string>
    <string name="e_mail">E-mail</string>
    <string name="player_name">nome do jogador</string>
    <string name="responsible_name">Nome do responsável</string>
    <string name="obligatory_field">Campo Obrigatório</string>
    <string name="new_player">Novo Jogador</string>
    <string name="observation">observações</string>
    <string name="age">idade</string>
    <string name="weight">peso</string>
    <string name="kg">Kg</string>
    <string name="height">altura</string>
    <string name="m">M</string>
    <string name="genre">Sexo</string>
    <string name="click_for_select">Clique para selecionar</string>
    <string name="indefined_position">Posição indefinida</string>
    <string name="responsible">Responsável</string>
    <string name="responsible_type">grau</string>
    <string name="name">Nome</string>
    <string name="contact">Contato</string>
    <string name="birth">Nascimento</string>
    <string name="healt_notes">Informações de saúde:</string>
    <string name="skills_notes">Informações de habilidades:</string>
    <string name="type_here">digite aqui</string>
    <string name="save">Salvar</string>
    <string name="attention">ATENÇÂO: não deixe de inserir outras informaçõs importantes na tela de detalhes do jogador.</string>
    <string name="success_add_player">Jogador adicionado com sucesso!</string>
    <string name="back">voltar</string>
    <string name="successfully_updated">Atualizado com Sucesso</string>
    <string name="successfully_added">Adicionado com Sucesso</string>
    <string name="coach">Treinador</string>
    <string name="member_since">Membro desde</string>
    <string name="full_name">Nome completo</string>
    <string name="preferred_name">Apelido</string>
    <string name="current_category">Categoria atual:</string>
    <string name="sao_jose">São José Do Ribeirão</string>
    <string name="log_out">log-out</string>
    <string name="type_to_search">digite para procurar</string>
</resources>