<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.events.EventsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/falseToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/jdb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/pageTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    android:text="@string/log_out"
                    android:textColor="@color/white"
                    android:textSize="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eventFindLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/falseToolbar"
                app:startIconDrawable="@drawable/ic_baseline_search_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eventFindEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_to_search"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewEventsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eventFindLayout"
                app:spanCount="1"
                app:guidelineUseRtl="true"
                tools:itemCount="2"
                tools:listitem="@layout/item_event" />






        </androidx.constraintlayout.widget.ConstraintLayout>





    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>

