<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.ChangePasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/falseToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/jdb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/pageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:background="@color/transparent"
                android:contentDescription="@string/back"
                android:gravity="center"
                android:src="@drawable/ic_back_24"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/currentPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/falseToolbar">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/currentPasswordEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Senha atual"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="13dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentPasswordLayout">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPasswordEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="nova senha"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="13dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/messagePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/jdb_ultra_light"
            app:layout_constraintTop_toBottomOf="@id/newPasswordLayout"
            app:layout_constraintStart_toStartOf="@id/newPasswordLayout"
            app:layout_constraintEnd_toEndOf="@id/newPasswordLayout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPasswordConfirmLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newPasswordLayout">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPasswordConfirmEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="confirmação"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="13dp" />

        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:id="@+id/messagePasswordConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/jdb_ultra_light"
            app:layout_constraintTop_toBottomOf="@id/newPasswordConfirmLayout"
            app:layout_constraintStart_toStartOf="@id/newPasswordConfirmLayout"
            app:layout_constraintEnd_toEndOf="@id/newPasswordConfirmLayout"/>


        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/newPasswordConfirmLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:enabled="false"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>