<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.events.EventRegisterFragment">

    <ProgressBar
        android:id="@+id/load"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/bola"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/falseToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/jdb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:background="@color/transparent"
            android:contentDescription="@string/back"
            android:gravity="center"
            android:src="@drawable/ic_back_24"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/falseToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/coachImg"
                android:layout_width="350dp"
                android:layout_height="180dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:src="@drawable/person_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eventNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                app:layout_constraintTop_toBottomOf="@+id/coachImg"
                tools:layout_editor_absoluteX="30dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nome de Evento"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:padding="13dp"
                    app:layout_constraintTop_toBottomOf="@+id/edtPlayerNameLayout" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eventDescriptionLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                app:layout_constraintTop_toBottomOf="@+id/eventNameLayout">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEventDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="descrição"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:padding="13dp"
                    app:layout_constraintTop_toBottomOf="@+id/edtPlayerNameLayout" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eventDateLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:hint="@string/birth"
                app:layout_constraintTop_toBottomOf="@id/eventDescriptionLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEventDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:longClickable="false"
                    android:padding="13dp" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30sp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="#00000000"
                android:padding="0dp"
                android:text="cancelar"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventDateLayout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:text="salvar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnCancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>